--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/sQuadro53/EkkremisSplashPage#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "node-fetch": "^2.3.0",
     "nodemon": "^2.0.20",
@@ -29,14 +30,14 @@
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.0",
     "babel-preset-es2015": "^6.24.1",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "style-loader": "^3.3.1",
     "css-loader": "^6.5.1",
     "eslint": "^8.27.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
