--- a/docker-compose-dev-hot.yml
+++ b/docker-compose-dev-hot.yml
@@ -4,10 +4,10 @@ services:
     image: ekkremiskubernetes/splash-dev
     container_name: splash-test
     ports:
-      - "3000:3000"
+      - "8080:8080"
     volumes:
       - .:/usr/src/app/
       - node_modules:/usr/src/app/node_modules/
-    command: "npm run test"
+    command: "npm run dev:hot"
 volumes: 
   node_modules: {}
