--- a/docker-compose-dev-hot.yml
+++ b/docker-compose-dev-hot.yml
@@ -2,7 +2,7 @@ version: "3"
 services: 
   dev: 
     image: ekkremiskubernetes/splash-dev
-    container_name: splash-test
+    container_name: splash-dev
     ports:
       - "8080:8080"
     volumes:
