found small bug'

--- a/docker-compose-dev-hot.yml
+++ b/docker-compose-dev-hot.yml
@@ -1,13 +1,13 @@
 version: "3"
 services: 
   dev: 
-    image: ekkremiskubernetes/splash-dev
-    container_name: splash-dev
+    image: ekkremiskubernetes/splash-dev2
+    container_name: splash-dev2
     ports:
       - "8080:8080"
     volumes:
-      - .:/usr/src/app/
-      - node_modules:/usr/src/app/node_modules/
+      - ./:/usr/src/app
+      - node_modules:/usr/src/app/node_modules
     command: "npm run dev:hot"
 volumes: 
-  node_modules: {}
+  node_modules:
